--- a/blog/templates/post_list.html
+++ b/blog/templates/post_list.html
@@ -1,14 +1,9 @@
-<html>
-	<div>
-		<h1><a href="/">HAVE FUN JESS!!</a></h1>
-	</div>
-	
-	{% for post in posts %}
-		<div>
-			<p>published: {{ post.published_date }}</p>
+<h1>Post</h1>
 
-			<h2><a href="">{{ post.title }}</a></h2>
-		</div>
+<ul>
+{% for post in object_list %}
+	<li><a href= "{% url 'post_list' %}">{{ post.title }}</a> - {{ post.author }}<br/>
+		{{ post.body }}</li>
+{% endfor %}
+</ul>
 
-	{% endfor %}
-</html>
