--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -22,13 +22,17 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
     </ul>
+
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="btn btn-primary" href='#' role="button">LOGIN</a>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-outline-primary">SIGN UP</button>
+        </li>
+    </ul>
+
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
